# opper-exploration

./: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/opperexploration/: __init__.py  custom_knowledge.py  getting_started.py  in_context_learning.py  main.py  task_completion.py  task_completion_all_params.py  task_completion_at_scale.py  tests_and_evals.py  tracing_and_metrics.py
