[project]
name = "opper-exploration"
version = "0.1.0"
description = "Exploration of Opper AI capabilities and examples"
readme = "README.md"
authors = [
    {name = "Alberto Prieto Löfkrantz"}
]
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.12.2",
    "opperai>=0.31.4",
]

[project.urls]
Homepage = "https://github.com/albertodpl/opper-exploration"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opperexploration"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.uv]
dev-dependencies = []